<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="lintuhaaste.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_detailsFragment"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add"
        android:name="lintuhaaste.ui.list.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_navigation_add_to_navigation_list"
            app:destination="@id/navigation_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_details"
        android:name="lintuhaaste.ui.list.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" >
        <action
            android:id="@+id/action_detailsFragment_to_editFragment"
            app:destination="@id/navigation_edit" />
    </fragment>
    <fragment
        android:id="@+id/navigation_edit"
        android:name="lintuhaaste.ui.list.EditFragment"
        android:label="@string/title_edit"
        tools:layout="@layout/fragment_edit" />
</navigation>