<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list.AddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CalendarView
                android:id="@+id/edit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding" />


            <EditText
                android:id="@+id/edit_species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_species"
                android:inputType="text"
                android:minHeight="@dimen/min_height"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_location"
                android:inputType="text"
                android:minHeight="@dimen/min_height"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_notes"
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:layout_margin="@dimen/big_padding"
                android:background="@color/black"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_notes"
                android:inputType="text"
                android:minHeight="@dimen/min_height"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:text="@string/button_add"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>