<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list.DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/species_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_species"
                android:layout_margin="@dimen/big_padding"
                android:textSize="42sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:textSize="18sp"
                android:layout_marginStart="32dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:fontFamily="sans-serif-light"
                android:textSize="18sp"
                android:layout_marginStart="32dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/notes_text"
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:fontFamily="sans-serif-light"
                android:minHeight="@dimen/min_height"
                android:textSize="18sp"
                android:layout_marginStart="32dp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/edit_button"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/delete_button"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>